--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     </div>
 
     <div class = 'img row'>
-      <a href = '#'><img src = 'images/icon-facebook.svg'></a>
-      <a href = '#' class = 'imgbw'><img src = 'images/icon-instagram.svg'></a>
-      <a href = '#' class = 'imgbw'><img src = 'images/icon-pinterest.svg'></a>
+      <a href = '#'><img src = 'images/icon-facebook.svg' alt = 'this'></a>
+      <a href = '#' class = 'imgbw'><img src = 'images/icon-instagram.svg' alt = 'this'></a>
+      <a href = '#' class = 'imgbw'><img src = 'images/icon-pinterest.svg' alt = 'this'></a>
     </div>
 
     <div class = 'last'>
